feat(Leet15): Java 8에서는 List.of() 메서드가 지원되지 않음